[package]
name = "veyron-sdk"
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
description = "Rust SDK for writing Veyron plugins — async IPC client, Plugin trait, and full Veyron wire protocol (framing, zstd compression, HMAC frame MACs, fragmentation, raw audio)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/veyron-core/veyron-sdk-rust"
documentation = "https://docs.rs/veyron-sdk"
keywords = ["veyron", "plugin", "ipc", "sdk", "kernel"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
veyron-wire = "0.1.1"
tokio = { version = "1", features = ["net", "io-util", "time", "rt", "macros"] }
prost = "0.13"
crc32fast = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
